unpackaged/main/default/objects/project_cloud__Stakeholder_Contact__c/project_cloud__Stakeholder_Contact__c.object-meta.xml
<CustomObject>
    <label>Stakeholder Contact</label>
    <nameField>
        <displayFormat>SC-{00000000}</displayFormat>
        <label>Stakeholder Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholder Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>