unpackaged/main/default/objects/project_cloud__Stakeholder_Contact__c/fields/project_cloud__Account__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stakeholder Contacts</relationshipLabel>
    <relationshipName>Stakeholder_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>