unpackaged/main/default/objects/project_cloud__Stakeholder_Contact__c/fields/project_cloud__Charter__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Charter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field shows what Charter is related to the Stakeholder Contact.</inlineHelpText>
    <label>Charter</label>
    <referenceTo>project_cloud__Charter__c</referenceTo>
    <relationshipLabel>Stakeholder Contacts</relationshipLabel>
    <relationshipName>Stakeholder_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>