unpackaged/main/default/objects/project_cloud__Stakeholder_Contact__c/fields/project_cloud__Comments__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Comments__c</fullName>
    <inlineHelpText>This field allows users to add details about the stakeholder contact they would like to store.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>