unpackaged/main/default/objects/project_cloud__Stakeholder_Contact__c/fields/project_cloud__Contact__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field shows what Contact is related to the Stakeholder Contact.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Stakeholder Contacts</relationshipLabel>
    <relationshipName>Stakeholder_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>