unpackaged/main/default/objects/project_cloud__Stakeholder_Contact__c/fields/project_cloud__Contact_Url__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Contact_Url__c</fullName>
    <formula>IF(AND(ISBLANK(project_cloud__Contact__c), ISBLANK(project_cloud__User__c)), null, HYPERLINK(&#39;/&#39; &amp; BLANKVALUE(project_cloud__Contact__c, project_cloud__User__c), project_cloud__Name__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stakeholder</label>
    <type>Text</type>
</CustomField>