unpackaged/main/default/objects/project_cloud__Stakeholder_Contact__c/fields/project_cloud__Email__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Email__c</fullName>
    <description>The email of the User or Contact</description>
    <formula>IF(NOT(ISBLANK(project_cloud__User__c)), project_cloud__User__r.Email, project_cloud__Contact__r.Email)</formula>
    <inlineHelpText>The email of the User or Contact associated to the Stakeholder Contact.</inlineHelpText>
    <label>Email</label>
    <type>Text</type>
</CustomField>