unpackaged/main/default/objects/project_cloud__Stakeholder_Contact__c/fields/project_cloud__Engagement__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Engagement__c</fullName>
    <formula>IF(
  ISPICKVAL(project_cloud__Power__c, &#39;High&#39;),
  IF(
    ISPICKVAL(project_cloud__Interest__c, &#39;High&#39;),
    &#39;Manage Closely&#39;,
    IF(
      ISPICKVAL(project_cloud__Interest__c, &#39;Low&#39;),
      &#39;Keep Satisfied&#39;,
      &#39;&#39;
    )
  ),
  IF(
    ISPICKVAL(project_cloud__Power__c, &#39;Low&#39;),
    IF(ISPICKVAL(project_cloud__Interest__c, &#39;High&#39;),
      &#39;Keep Informed&#39;,
      IF(
        ISPICKVAL(project_cloud__Interest__c, &#39;Low&#39;),
        &#39;Monitor&#39;,
        &#39;&#39;
      )
    ), &#39;&#39;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement</label>
    <type>Text</type>
</CustomField>