unpackaged/main/default/objects/project_cloud__Stakeholder_Contact__c/fields/project_cloud__Interest__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Interest__c</fullName>
    <inlineHelpText>This field will allow users to specify the level of interest from the Stakeholder Contacts and is used in the Engagement calculation.</inlineHelpText>
    <label>Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>