unpackaged/main/default/objects/project_cloud__Stakeholder_Contact__c/fields/project_cloud__Mobile__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Mobile__c</fullName>
    <formula>IF(NOT(ISBLANK(project_cloud__User__c)), project_cloud__User__r.MobilePhone, project_cloud__Contact__r.MobilePhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If a user is specified on the Stakeholder Contact, this field will show the user&#39;s phone number.</inlineHelpText>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>