unpackaged/main/default/objects/project_cloud__Stakeholder_Contact__c/fields/project_cloud__Name__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Name__c</fullName>
    <description>The name of the User or Contact.</description>
    <formula>IF(NOT(ISBLANK(project_cloud__User__c)), (project_cloud__User__r.FirstName &amp; &#39; &#39; &amp; project_cloud__User__r.LastName), IF(NOT(ISBLANK(project_cloud__Contact__c)), (project_cloud__Contact__r.FirstName &amp; &#39; &#39; &amp; project_cloud__Contact__r.LastName), &#39;Placeholder&#39;))</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>