unpackaged/main/default/objects/project_cloud__Stakeholder_Contact__c/fields/project_cloud__Phone__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Phone__c</fullName>
    <description>The phone number of the User or Contact</description>
    <formula>IF(NOT(ISBLANK(project_cloud__User__c)), project_cloud__User__r.Phone, project_cloud__Contact__r.Phone)</formula>
    <inlineHelpText>If a user OR contact is specified on the Stakeholder Contact, this field will show the user or contact&#39;s phone number.</inlineHelpText>
    <label>Phone</label>
    <type>Text</type>
</CustomField>