unpackaged/main/default/objects/project_cloud__Stakeholder_Contact__c/fields/project_cloud__Project__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The project this is related to.</description>
    <inlineHelpText>This field will show the Project that the Stakeholder Contact is related too.</inlineHelpText>
    <label>Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Stakeholder Contacts</relationshipLabel>
    <relationshipName>Stakeholder_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>