unpackaged/main/default/objects/project_cloud__Stakeholder_Contact__c/fields/project_cloud__Reports_To__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Reports_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reports To</label>
    <referenceTo>project_cloud__Stakeholder_Contact__c</referenceTo>
    <relationshipLabel>Stakeholder Contacts</relationshipLabel>
    <relationshipName>Stakeholder_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>