unpackaged/main/default/objects/project_cloud__Stakeholder_Contact__c/fields/project_cloud__Role__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Role__c</fullName>
    <inlineHelpText>This field will allow users to specify the Stakeholder Contacts Role and is used in the Engagement calculation.</inlineHelpText>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer User</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>Stakeholder</fullName>
            </value>
            <value>
                <fullName>Technical Project Manager</fullName>
            </value>
            <value>
                <fullName>Customer Success Manager</fullName>
            </value>
            <value>
                <fullName>Implementation Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>