unpackaged/main/default/objects/project_cloud__Stakeholder_Contact__c/fields/project_cloud__User__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will show the User the Stakeholder Contact is related too.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stakeholder_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>