unpackaged/main/default/objects/project_cloud__Stakeholder_Contact__c/validationRules/project_cloud__One_Contact_or_User.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__One_Contact_or_User</fullName>
    <active>true</active>
    <description>This object must lookup to a single User or Contact</description>
    <errorConditionFormula>project_cloud__User__c != null &amp;&amp; project_cloud__Contact__c != null</errorConditionFormula>
    <errorMessage>Please select only one User or Contact</errorMessage>
</ValidationRule>